fixed zoom and overflow issues

--- a/src/components/Body/Body.css
+++ b/src/components/Body/Body.css
@@ -8,7 +8,7 @@
     padding-top: 4px;
     align-items: flex-start;
     flex-wrap: nowrap;
-    height: 84.8vh;
+    height: 67.84vh;
     position: fixed;
 }
 
